Display fixes for URL, email, and locations.
Show location address1 and address2 on their own lines.
Don't display address or phone icons if their fields are blank.
Truncate website URL and email to fit the space provided.
Escape optional title passed to auto_link.

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -309,6 +309,24 @@
 						content: "\f0ac";
 						@include scale(font-size, 19,16);
 					}
+					.short {
+						display: inline-block;
+					}
+					.long {
+						display: none;
+							
+						a:before {
+							padding-right: 4.040404%;
+						}
+					}
+					@media (max-width: $break-8) {
+						.short {
+							display: none;
+						}
+						.long {
+							display: inline-block;
+						}
+					}
 				}
 				#email {
 					a:before {
